# Mount-Kephart

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Linux.sh  README.md  SECURITY.md  Windows.ps1
.github/workflows/: rust-clippy.yml
Mount Kephart/templates/: 500.html.tera  home.html.tera  lesson.html.tera
resources/: Lessons.odt
src/: database.rs  main.rs  routes.rs  tests.rs
templates/: 404.html.tera  500.html.tera  home.html.tera  lesson.html.tera
