[package]
name = "mount_kephart"
version = "1.1.2"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rusqlite = "0.28.0"

# Remove everything after this for faster build times
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
